<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013 AppGlu, Inc.
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<resources>
    <string name="app_name">Trek Episode Guide</string>
    <string name="app_name_shortcut">Trek</string>

    <string name="trek">TREK</string>
    <string name="episode_guide">EPISODE GUIDE</string>
    <string name="content_from">CONTENT FROM</string>
    <string name="memory_alpha">MEMORY ALPHA</string>
    <string name="used_with_permission">USED WITH PERMISSION</string>
    <string name="built_with">BUILT WITH</string>
    <string name="appglu">APPGLU</string>
    <string name="appglu_tag_line">MISSION CONTROL FOR YOUR MOBILE APP</string>
    <string name="separator">&#8226;</string>
    <string name="designed_by">DESIGNED BY</string>
    <string name="arctouch">ARCTOUCH</string>
    <string name="app_development">APP DEVELOPMENT STUDIO</string>
    
    <string name="no_connection_retry_later">NO CONNECTION TO DATABANK &#8226; RETRY LATER</string>
    <string name="no_connection">NO CONNECTION TO DATABANK</string>
    <string name="retry_later">RETRY LATER</string>
    
    <string name="loading">Loading&#8230;</string>
    <string name="no_episodes">Unable to load episodes from the internal storage.</string>

    <string name="title_tab">ABC</string>
    <string name="stardate_tab">STARDATE</string>
    <string name="airdate_tab">AIR DATE</string>

    <string name="splash_description">Trek Splash Screen</string>
    <string name="thumbnail_description">Episode Thumbnail</string>
    <string name="image_description">Episode Photo</string>
    <string name="placeholder_description">Episode photo not available</string>

    <string name="images">IMAGES</string>
    <string name="close">CLOSE</string>

    <string name="previous">PREVIOUS</string>
    <string name="next">NEXT</string>
    <string name="stardate">STARDATE</string>
    <string name="like">LIKE</string>
    <string name="liked">LIKED</string>

</resources>
