<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013 AppGlu, Inc.
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/loading_progress"
        style="@android:style/Widget.Holo.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:indeterminate="true" />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/status_image_background">
    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_alignParentTop="true"
	        android:layout_above="@+id/splash_icon"
	        android:gravity="center"
	        android:orientation="vertical">
        
		    <com.appglu.trekepisodeguide.ui.view.TrekTextView
		        android:id="@+id/no_connetion_text"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:visibility="gone"
		        android:gravity="center_horizontal"
		        android:includeFontPadding="false"
		        android:text="@string/no_connection"
		        android:textColor="@color/splash_screen_light_grey"
		        android:textSize="32dp"
		        tools:ignore="SpUsage" />
		    
		    <com.appglu.trekepisodeguide.ui.view.TrekTextView
		        android:id="@+id/retry_later"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:visibility="gone"
		        android:gravity="center_horizontal"
		        android:includeFontPadding="false"
		        android:text="@string/retry_later"
		        android:textColor="@color/splash_screen_light_grey"
		        android:textSize="32dp"
		        tools:ignore="SpUsage" />
	    
	    </LinearLayout>
	    
	    <ImageView
	        android:id="@+id/splash_icon"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:contentDescription="@string/splash_description"
	        android:src="@drawable/splash_icon" />
    
    </RelativeLayout>

    <ImageView
        android:id="@+id/status_image_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:contentDescription="@string/splash_description"
        android:background="@drawable/splash_syncing_animation" />

    <LinearLayout
        android:id="@+id/text_section"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/status_image_background"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip">

            <com.appglu.trekepisodeguide.ui.view.TrekTextView
                android:id="@+id/trek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/trek"
                android:textColor="@color/splash_screen_dark_grey"
                android:textSize="40dp"
                tools:ignore="SpUsage" />

            <com.appglu.trekepisodeguide.ui.view.TrekTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_toRightOf="@+id/trek"
                android:includeFontPadding="false"
                android:text="@string/episode_guide"
                android:textColor="@color/splash_screen_light_grey"
                android:textSize="40dp"
                tools:ignore="SpUsage" />
            
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:onClick="onClickVisitMemoryAlpha">
            
            <com.appglu.trekepisodeguide.ui.view.TrekTextView
                android:id="@+id/content_from"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:includeFontPadding="false"
	            android:text="@string/content_from"
	            android:textColor="@color/splash_screen_dark_grey"
	            android:textSize="25dp"
	            tools:ignore="SpUsage" />

            <com.appglu.trekepisodeguide.ui.view.TrekTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_toRightOf="@+id/content_from"
                android:includeFontPadding="false"
                android:text="@string/memory_alpha"
                android:textColor="@color/splash_screen_violet"
                android:textSize="25dp"
                tools:ignore="SpUsage" />
        </RelativeLayout>
        
        <com.appglu.trekepisodeguide.ui.view.TrekTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/used_with_permission"
            android:textColor="@color/splash_screen_dark_grey"
            android:textSize="25dp"
            android:clickable="true"
            android:onClick="onClickVisitMemoryAlpha"
            tools:ignore="SpUsage" />
        
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dip"
            android:onClick="onClickVisitAppGlu">

            <com.appglu.trekepisodeguide.ui.view.TrekTextView
                android:id="@+id/built_with"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:includeFontPadding="false"
	            android:text="@string/built_with"
	            android:textColor="@color/splash_screen_dark_grey"
	            android:textSize="25dp"
	            tools:ignore="SpUsage" />

            <com.appglu.trekepisodeguide.ui.view.TrekTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_toRightOf="@+id/built_with"
                android:includeFontPadding="false"
                android:text="@string/appglu"
                android:textColor="@color/splash_screen_violet"
                android:textSize="25dp"
                tools:ignore="SpUsage" />
            
        </RelativeLayout>
        
        <com.appglu.trekepisodeguide.ui.view.TrekTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/appglu_tag_line"
            android:textColor="@color/splash_screen_dark_grey"
            android:clickable="true"
            android:onClick="onClickVisitAppGlu"
            android:textSize="25dp"
            tools:ignore="SpUsage" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dip"
            android:layout_gravity="center_horizontal"
            android:onClick="onClickVisitArcTouch">

            <com.appglu.trekepisodeguide.ui.view.TrekTextView
                android:id="@+id/designed_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/designed_by"
                android:textColor="@color/splash_screen_dark_grey"
                android:textSize="25dp"
                tools:ignore="SpUsage" />

            <com.appglu.trekepisodeguide.ui.view.TrekTextView
                android:id="@+id/arctouch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_toRightOf="@+id/designed_by"
                android:includeFontPadding="false"
                android:text="@string/arctouch"
                android:textColor="@color/splash_screen_violet"
                android:textSize="25dp"
                tools:ignore="SpUsage" />
            
        </RelativeLayout>
        
        <com.appglu.trekepisodeguide.ui.view.TrekTextView
	        android:id="@+id/app_development"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:includeFontPadding="false"
	        android:text="@string/app_development"
	        android:textColor="@color/splash_screen_dark_grey"
	        android:textSize="25dp"
	        android:clickable="true"
	        android:onClick="onClickVisitArcTouch"
	        tools:ignore="SpUsage" />
        
    </LinearLayout>

</RelativeLayout>