<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2013 AppGlu, Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false">
    
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="@integer/list_layout_weight"
        android:orientation="horizontal">
        
        <ImageView 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_gravity="center"
	    	android:layout_marginLeft="12dp"
	    	android:layout_marginRight="12dp"
	    	android:src="@drawable/icon"
	    	tools:ignore="ContentDescription" />

        <com.appglu.trekepisodeguide.ui.view.TrekButton
            android:id="@+id/title_tab"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/tab_selector"
            android:onClick="onTabTitleSelected"
            android:text="@string/title_tab"
            android:textColor="@android:color/black"
            android:textSize="28sp"
            tools:ignore="NestedWeights" />

        <com.appglu.trekepisodeguide.ui.view.TrekButton
            android:id="@+id/stardate_tab"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/tab_selector"
            android:onClick="onTabStardateSelected"
            android:text="@string/stardate_tab"
            android:textColor="@android:color/black"
            android:textSize="28sp" />

        <com.appglu.trekepisodeguide.ui.view.TrekButton
            android:id="@+id/airdate_tab"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/tab_selector"
            android:onClick="onTabAirdateSelected"
            android:text="@string/airdate_tab"
            android:textColor="@android:color/black"
            android:textSize="28sp" />

        <ImageView
            android:id="@+id/tab_circle"
            android:layout_width="20dip"
            android:layout_height="match_parent"
            android:background="@drawable/tab_circle"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="@integer/details_layout_weight"
        android:gravity="center_vertical">

        <com.appglu.trekepisodeguide.ui.view.TrekTextView
            android:id="@+id/episode_title"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="35dp"
            tools:ignore="SpUsage,NestedWeights" />

        <com.appglu.trekepisodeguide.ui.view.TrekTextView
            android:id="@+id/like_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/details_like_button_selector"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onLikedClick"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@android:color/black"
            android:textSize="30dp"
            android:visibility="gone"
            tools:ignore="SpUsage" />
    </LinearLayout>

</LinearLayout>